--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "url": "git+ssh://git@github.com/ibufu/ng2-switch.git"
   },
   "dependencies": {
+    
+  },
+  "devDependencies": {
     "@angular/common": "^2.0.0",
     "@angular/compiler": "^2.0.0",
     "@angular/core": "^2.0.0",
@@ -29,9 +32,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.23"
-  },
-  "devDependencies": {
+    "zone.js": "^0.6.23",
     "awesome-typescript-loader": "^3.0.0-beta.9",
     "typescript": "^2.1.4",
     "typings": "^1.3.1",
